# geoscalse-ingestion-service

./: .dockerignore  .env.sample  Dockerfile  pyproject.toml
app/: models.py  utils.py
app/alembic/: env.py
app/alembic/versions/: aee24b2db1c8_new_migration.py  d4a07749aa7c_new_migration.py
app/api/: deps.py
app/api/routes/: common.py  health.py  login.py  users.py
app/core/: config.py  security.py
scripts/: prestart.sh
