[project]
name = "gis"
version = "0.1.0"
description = "geoscalse-ingestion-service"
authors = [
    {name = "amir.espahbodi",email = "dev.amir.espahbodi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "tenacity (>=9.1.4,<10.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "emails (>=0.6,<0.7)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "sqlmodel (>=0.0.33,<0.0.34)",
    "pyjwt (>=2.11.0,<3.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "rsa (>=4.9.1,<5.0.0)",
    "cryptography (>=46.0.5,<47.0.0)",
    "slowapi (>=0.1.9,<0.2.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "email-validator (>=2.3.0,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "fastapi[standard] (>=0.129.0,<0.130.0)",
    "psycopg[binary] (>=3.3.2,<4.0.0)",
    "sqlalchemy[asyncio] (>=2.0.46,<3.0.0)",
    "pwdlib[bcrypt] (>=0.3.0,<0.4.0)",
    "sentry-sdk[fastapi] (>=2.52.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "*", from = "app"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py314"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
    "T201",   # print statements are not allowed
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.coverage.run]
source = ["app"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true
